Completed main page: - Fixed styling around the lower page by adding backgrounds and spacing to content. Changed text to white for better clarity.

--- a/projectTwo-advancedCss/css/styles.css
+++ b/projectTwo-advancedCss/css/styles.css
@@ -62,36 +62,50 @@ header {
 }
 
 .emptySpace {
-    background-color: #424140;
-    height: 200px;
     display: flex;
+    padding: 10px;
+    margin: auto;
+    margin-top: 25px;
+    margin-bottom: 100px;
+    width: 75%;
+    height: 100px;
+    background-color: #424140;
+    border: 2px solid #69645f;
+    border-radius: 30px;
+    opacity: 0.7;
 }
 
 .emptySpace > h3 {
-    margin: 40px;
-    padding: 50px;
-    font-size: 50px;
+    margin: 20px;
+    margin-left: 50px;
+    padding: 25px;
+    font-size: 35px;
     color: aliceblue;
 }
 
 .emptySpace > .followText > p {
-    margin: 53px;
-    margin-left: 200px;
-    padding: 50px;
-    font-size: 30px;
+    margin: 25px;
+    margin-top: 30px;
+    margin-left: 150px;
+    padding: 25px;
+    font-size: 20px;
     color: aliceblue;
 }
 
 .bodyContent {
-    margin-top: 50px;
+    width: 1200px;
+    margin: auto;
+    padding-top: 50px;
     display: flex;
     flex-wrap: wrap;
+    background-color: #424140;
+    opacity: 0.8;
 }
 
 .bodyContent > img {
-    margin-left: 200px;
-    width: 1000px;
-    height: 700px;
+    margin-left: 50px;
+    width: 700px;
+    height: 450px;
 }
 
 .bodyContent > h3 {
@@ -100,13 +114,17 @@ header {
 }
 
 .textGroup {
-    
+    color:aliceblue;
+    margin: 50px;
+    width: 300px;
 }
 
 .bodyContent > p {
     margin-left: 25px;
-    width: 400px;
+    margin-right: 25px;
+    width: 500px;
     padding: 25px;
+    color: aliceblue;
 }
 
 .navigation {
